--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>el-pollo-loco</title>
-    <script></script>
+    <script src="js/game.js"></script>
 </head>
 <body>
+    <h1>el pollo loco</h1>
+    <canvas>width="780" height="480"</canvas>
     
 </body>
 </html>
