--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>el-pollo-loco</title>
     <script src="js/game.js"></script>
-</head>
-<body>
+  </head>
+  <body onload="init()">
     <h1>el pollo loco</h1>
-    <canvas>width="780" height="480"</canvas>
-    
-</body>
+    <canvas id="canvas">width="780" height="480"</canvas>
+  </body>
 </html>
