--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>el-pollo-loco</title>
+    <script src="modals/chicken.class.js"></script>
+    <script src="modals/character.class.js"></script>
     <script src="modals/movable-object.class.js"></script>
     <script src="js/game.js"></script>
   </head>
